реализован прототип