@@ -3,6 +3,7 @@ package ru.otus.springwork11.data;
 import com.github.cloudyrock.mongock.ChangeLog;
 import com.github.cloudyrock.mongock.ChangeSet;
 import com.mongodb.client.MongoDatabase;
+import lombok.val;
 import org.jetbrains.annotations.NotNull;
 import ru.otus.springwork11.model.Author;
 import ru.otus.springwork11.model.Book;
@@ -13,6 +14,7 @@ import ru.otus.springwork11.repository.KindBookRepository;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @ChangeLog
 public class Changelog {
@@ -33,30 +35,31 @@ public class Changelog {
 
     @ChangeSet(order = "002", id = "saveAuthor", author = "alyanovao")
     public void saveAuthor(@NotNull AuthorRepository repository) {
-        repository.save(author1).subscribe();
-        repository.save(author2).subscribe();
-        repository.save(author3).subscribe();
+        val author = List.of(author1, author2, author3);
+        repository.saveAll(author).subscribe();
     }
 
     @ChangeSet(order = "003", id = "saveKind", author = "alyanovao")
-    public void saveKindBook(@NotNull KindBookRepository repository) {
-        repository.save(kind1).subscribe();
-        repository.save(kind2).subscribe();
-        repository.save(kind3).subscribe();
+    public void saveKindBook(@NotNull KindBookRepository repository) throws InterruptedException {
+        val kinds = List.of(kind1, kind2, kind3);
+        repository.saveAll(kinds).subscribe();
+
+        Thread.sleep(1_000);
     }
 
     @ChangeSet(order = "004", id = "saveBook", author = "alyanovao")
     public void saveKindBook(@NotNull BookRepository repository) {
-        repository.save(new Book("Сказки Пушкина", new ArrayList<>(Arrays.asList(author1))
-                , new ArrayList<>(Arrays.asList(kind1))
-                , new ArrayList<>())).subscribe();
+        val books = List.of(
+                new Book("Сказки Пушкина", new ArrayList<>(Arrays.asList(author1))
+                    , new ArrayList<>(Arrays.asList(kind1))
+                    , new ArrayList<>()),
+                new Book("Неукротимая планета", new ArrayList<>(Arrays.asList(author3))
+                    , new ArrayList<>(Arrays.asList(kind3))
+                    , new ArrayList<>()),
+                new Book("Стальная крыса", new ArrayList<>(Arrays.asList(author3))
+                    , new ArrayList<>(Arrays.asList(kind3))
+                    , new ArrayList<>()));
+        repository.saveAll(books).subscribe();
 
-        repository.save(new Book("Неукротимая планета", new ArrayList<>(Arrays.asList(author3))
-                , new ArrayList<>(Arrays.asList(kind3))
-                , new ArrayList<>())).subscribe();
-
-        repository.save(new Book("Стальная крыса", new ArrayList<>(Arrays.asList(author3))
-                , new ArrayList<>(Arrays.asList(kind3))
-                , new ArrayList<>())).subscribe();
     }
 }
